# lazypr

./: .gitignore  CLAUDE.md  Makefile  README.md  lazypr.py  lazypr.spec  pyproject.toml  rthook_logfire.py  setup.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-06-binary-distribution-design.md  2026-03-06-fetch-before-diff.md  2026-03-06-onedir-distribution.md  2026-03-07-yes-and-dry-run-flags-design.md
scripts/: build.sh  install.sh  uninstall.sh
src/lazypr/: __init__.py  __main__.py  ai.py  config.py  config_file.py  diff.py  ignore.py  validation.py
tests/: test_ai.py  test_config_file.py  test_dependencies.py  test_diff.py  test_ignore.py  test_integration.py  test_validation.py
