[project]
name = "lazypr"
version = "0.1.0"
description = "AI-powered PR creation from git diffs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.20",
    "pathspec>=0.12.0",
]

[project.scripts]
lazypr = "lazypr:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12",
]
