[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lazypr"
dynamic = ["version"]
description = "AI-powered PR creation from git diffs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.20",
    "pathspec>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
lazypr = "lazypr:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12",
    "black>=24.0",
]

[tool.setuptools_scm]
version_file = "src/lazypr/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
